--- a/230615.md
+++ b/230615.md
@@ -4,21 +4,44 @@
 
 등교: 7시 47분
 
-하교: 시 분
+하교: 25시 11분
+
+공부시간: 8시간 30분
 
 ## 1. To-do
 
-- [ ]  기알 중간 기출 2, 3번
-- [ ]  기알 중간 범위 복습
-- [ ]  기알 PPCA, GPLVM 복습
-- [ ]  기알 중간 problem set 전체
-- [ ]  기알 시험
-- [ ]  운체 녹강 10
-- [ ]  운체 녹강 11
-- [ ]  운체 녹강 12
+- [x]  기알 중간 기출 2, 3번
+- [x]  기알 중간 범위 복습
+- [ ]  기알 PPCA, GPLVM 복습 - 속상하다. 여기서 식 전개 연습했으면 맞았을지도…
+- [x]  기알 중간 problem set 전체
+- [x]  기알 시험
+- [x]  운체 녹강 10
+- [x]  운체 녹강 11
+- [x]  운체 녹강 12
+- [x]  운체 과제 Symbolic link 사이클 확인 추가
 
 ## 2. Today I Did
 
+1. 기알 중간 기출 복습, 중간 problem set 복습
+2. 기알 시험
+    1. 진짜로 인생에서 본 시험 중 2019학년도 수능 국어만큼 못 본 시험은 처음이다. 
+    2. “중간고사 문제가 나올 수도 있어요” 라고 말하셨으면서 그냥 이상한 문제가 나왔다. 
+3. 운체 공부
+    1. Memory Management 2
+    2. Virtual Memory 1, 2(세모)
+
 ## 3. 일기
 
+정범 왈 “연진이가 망한 시험은 잘못 낸 시험이다” 위로가 되는 말이다. 시험 끝나자마자 화가 많이 났는데 관희오빠랑 건이가 혼신의 위로를 해주었다. 감사하다. 감정적으로 주변 사람들 앞에서 화를 내는 것은 자제하는 게 맞는 것 같다. 건아 고마워… 사실 기말 범위 이론 공부를 제대로 안 한 내 잘못이다. 재수강은 안하겠지만 앞으로 이런 일이 없도록 해야겠다. 
+
+운체 공부를 생각보다 못했다. 운체 과제가 계속계속 고칠 곳이 나오기 때문이다. 역시 김휘수. test case generator이다. 내일 하루종일 운체 팟팅~!
+
 ## 4. Tomorrow
+
+- [ ]  운체 13 듣기
+- [ ]  운체 14 듣기
+- [ ]  운체 15 듣기
+- [ ]  운체 작년 기출 풀기
+- [ ]  운체 제작년 기출 풀기
+- [ ]  운체 중간 범위 공부
+- [ ]  운체 휘수오빠랑 기출 뽀개기 7시
