--- a/230615.md
+++ b/230615.md
@@ -34,6 +34,8 @@
 
 정범 왈 “연진이가 망한 시험은 잘못 낸 시험이다” 위로가 되는 말이다. 시험 끝나자마자 화가 많이 났는데 관희오빠랑 건이가 혼신의 위로를 해주었다. 감사하다. 감정적으로 주변 사람들 앞에서 화를 내는 것은 자제하는 게 맞는 것 같다. 건아 고마워… 사실 기말 범위 이론 공부를 제대로 안 한 내 잘못이다. 재수강은 안하겠지만 앞으로 이런 일이 없도록 해야겠다. 
 
+어제 새벽에 컴그 성적 나왔는데 A+ 확정인듯하다. 
+
 운체 공부를 생각보다 못했다. 운체 과제가 계속계속 고칠 곳이 나오기 때문이다. 역시 김휘수. test case generator이다. 내일 하루종일 운체 팟팅~!
 
 ## 4. Tomorrow
