--- a/230920.md
+++ b/230920.md
@@ -1,28 +1,92 @@
 
 ## ✅ Today I Did
 
+#### 19강. Multi-Version Concurrency Control
+
+##### MVCC
+
+- Concurrency Control protocol X
+    - DBMS's design and implementation
+- multiple physical versions of a single logical object
+- Key Properties
+    - Writers don't block readers
+    - Readers don't block writers
+- Read-only txn reads a consistent snapshot(logical) using timestamps
+- MVCC supports time-travel queries
+- Design Decisions
+    - Concurrency Control Protocol
+    - Version Storage
+    - Garbage Collection
+    - Index Management
+
+##### Version Storage
+
+- Approach 1. Append-Only Storage
+    - Oldest to Newest
+    - Newest to Oldest
+- Approach 2. Time-Travel Storage
+    - Old versions are copied to separate table space
+    - main table stores the latest version
+- Approach 3. **Delta Storage**
+    - time travel storage와 비슷한데 바뀐 attribute만
+    - txn이 old version을 읽을 때 reverse order로 읽어서 recreate한다.
+
+##### Garbage Collection
+
+- Approach 1. Tuple-level
+    - Background Vacuuming : periodically does sequential scan and looks for reclaimable version - any storage
+    - Cooperative Cleaning : worker threads identify reclaimable versions as they traverse version chain - O2N
+- Approach 2. Transaction-level
+    - txn : read/write set 저장
+    - DBMS determines when all versions created by a finished transaction are no longer visible
+
+##### Index Management
+
+- primary key index : points to version chain head
+    - primary key를 바꾸는 txn → DELETE & INSERT로 취급
+- secondary indexes
+    - Approach 1. Logical Pointers
+        - tuple id & hash table
+        - primary index의 포인터
+    - Approach 2. Physical pointers
+
 ## ⏰ 루틴 만들기
 
 기상: 08시 20분
 
 등교: 09시 05분
 
-하교: 18시 100분
+하교: 18시 20분
 
-취침: 24시 30분 
+취침: 27시 10분 
 
 ## ✔ To-do
 
 - [x] 점심 11:30 - 샐러드
-- [x] 저녁 18:00 - 지나랑 약속
+- [x] 저녁 18:30 - 지나랑 쭈꾸미
 - [x] CMU Database Systems 19강
 - [ ] 수치해석 과제 제출
 - [x] 컴파일러 수업
 - [x] 컴파일러 과제1
 - [x] 컴파일러 정리
 - [ ] 기계학습이론 수업
-- [x] 근로 교안 번역 시작이라도
+- [x] 근로 교안 번역 (2시간 - 실질 40쪽)
 
 ## 💭 일기
 
+왜 이렇게 졸릴까? 수업만 들으면 존다 요즘.
+
+지나랑 놀다가 들어와서 빨래도 돌리고 교안 번역도 반 넘게 했다. 
+
 ## ✈ Tomorrow
+
+- [ ] 점심 12:00 - 샐러드
+- [ ] 저녁 18:00 - 학식
+- [ ] CMU Database Systems 20강
+- [ ] 수치해석 과제 제출
+- [ ] 기계학습이론 수업
+- [ ] 분산컴퓨팅 수업
+- [ ] 수치해석 수업
+- [ ] 컴파일러 프로젝트
+- [ ] 근로 교안 번역 (2시간 - 실질 40쪽)
+- [ ] 인수인계 일정 연락
