--- a/2023/231004~/231004.md
+++ b/2023/231004~/231004.md
@@ -167,6 +167,99 @@
         - Trading phase : 활발히 교류
         - Last download phase : 새로 도착한 neighbor가 운 좋게 마지막 조각을 가지고 있어야 끝남
 
+#### Introducing Kubernetes
+
+##### Cloud Native Computing
+
+- an approach in software development that utilizes cloud computing to “build and run scalable applications in modern, dynamic environments such as public, private, and hybrid clouds”
+- elements : **containers, microservices**, serverless functions (요청이 있을 때 동적으로 서버를 allocate), immutable infrastructure deployed via declarative code
+- cloud native appliications : set of microservices
+- kubernetes : 복수개의 container를 관리하는 tool
+- DevOps : 관리하는 방법론
+- docker의 장점 : SW를 package한다.  virtualized environment → isolation
+
+- Container
+    - 기존의 VM : VM 끼리 isolation 제공, 그치만 performance 안 좋음 (guest OS 따로 사용)
+    - container : hostOS 공유 → lightweight, container 간 isolation은 지원
+- MSA (microservices architecture)
+    - monolithic → SOA(service-oriented application) → **microservices**
+    - container가 많아서 수동으로 관리는 할 수 없다. orchestration 필요. 그 tool이 Kubernetes
+    - microservice: 하나의 function만 수행
+        - 분할 후 독자적인 process로 수행할 수 있도록, 상호간의 communication (interface를 통함)
+        - 좋은점 : replication 유리해진다. (부하가 걸리는 component의 replica)
+    - Scaling Microservices
+        - scaling out ↔ scaling up
+        - horizontal ↔ vertical scaling
+- DevOps : Development + Operations 개발과 운용
+    - 여러 툴들
+
+### CMU Database Systems
+
+#### 23강. Distributed OLTP Databases
+
+가정 : 믿을만한 node들
+
+아니라면 blockchain
+
+##### Atomic Commit Protocols
+
+- Two-phase Commit : coordinator & participants
+    
+    txn에 참여한 모든 node가 동의하면 commit
+    
+    - Phase 1. Prepare ⇒ 여기서 commit으로 결정되면 앞으로는 거절 안 당함
+    - Phase 2. Commit / Abort
+    - Optimizations
+        - Early Prepare Voting : 마지막 query인 경우 미리 voting 결과 반환
+        - Early Acknowledgement After Prepare : 2단계 끝나기 전에 미리 commit 완료했다고 client에게 알림
+- Paxos : proposer &  acceptors
+    
+    다수결
+    
+    뭔가 와닿지 않음…
+    
+    - Phase 1. Propose
+    - Phase 2. Commit ⇒ 여기서 거절당하기도 함
+    - multi-paxos : single leader → Propose 단계 스킵해도 됨, 실패하면 full paxos로 복귀
+
+##### Replication
+
+Design Decisions:
+
+- Replica configuration
+    - Master-replica
+    - Multi-master
+    
+    ⇒ K-Safety : 최소 k개의 replica
+    
+- Propagation Scheme
+    - Synchronous (Strong Consistency)
+    - Assynchronous (Eventual Consistency)
+- Propagation Timing
+    - Continuous : 즉시 적는다. commit/abort message도 보내야함
+    - On Commit : txn의 log record 크기가 메모리 크기보다 작다고 가정
+- Update Method
+    - active-active : txn이 각 replica에서 실행됨
+    - active-passive : txn은 한 곳에서 실행, replica에 변경사항 propagate됨
+
+##### Consistency Issues(CAP)
+
+아래 세 가지를 모두 만족하는 것은 불가능함. 둘만 골라
+
+- Consistent
+- Available
+- Partition Tolerant
+
+Traditional DBMSs : failure → reconnection 전까지 update 불가능 (Availability 포기)
+
+NoSQL DBMSs : failure → resolve conflicts after reconnection (Consistency 포기)
+
+##### Federated Databases
+
+여러 DBMS 사용하는 application → single interface (middleware) 
+
+매우 어렵다.
+
 ## ⏰ 루틴 만들기
 
 취침: 03시 00분
@@ -175,12 +268,14 @@
 
 등교: 08시 50분
 
-하교: 18시 10분
+하교: 20시 30분
+
+- 아침 09:00 - 잇더핏 초코
+- 점심 12:30 - 한솥 제육강된장비빔밥
+- 저녁 17:30 - 샐러디
 
 ## ✔ To-do
 
-- [x] 아침 09:00 - 잇더핏 초코
-- [x] 점심 12:30 - 한솥
 - [x] 09:00 컴파일러 수업
 - [x] 18:30 네일 예약
 - [ ] 컴파일러 프로젝트 레포트
@@ -189,13 +284,24 @@
 - [x] 분산컴퓨팅 녹강(09/28)
 - [x] 분산컴퓨팅 녹강(10/02)
 - [ ] 근로 3차시 교안 번역
-- [ ] CMU Database Systems 23강
+- [x] CMU Database Systems 23강
 - [ ] CMU Database Systems 24강
 
 ## 💭 일기
 
-비가 왜 와...ㅜㅜ
+갑자기 비가 왔지만 다행히 안 맞았다. 네일 받고 연구실에 다시 나와서 강의를 들었다. 뿌듯 :)
 
-네일 받고 다시 와서 DB 강의 듣자
+내일도 바쁘겠다... 
 
 ## ✈ Tomorrow
+
+- [ ] 아침에 세탁기 건조기
+- [ ] 아침 사과!
+- [ ] 13:00 분산컴퓨팅 수업 (Kubernetes 실습)
+- [ ] 16:00 수치해석 수업
+- [ ] 18:00 508호 컴소 대학원 입학설명회
+- [ ] 19:00 PT
+- [ ] 컴파일러 프로젝트 레포트
+- [ ] 기게학습이론 녹강 4개 밀림
+- [ ] 근로 3차시 교안 번역
+- [ ] CMU Database Systems 24강
